# Particle_sim

./: CMakeLists.txt  README.md  analised.cpp  histo.root  main.cpp  particle.cpp  particle.h  particletype.cpp  particletype.h  ptt.cpp  resonancetype.cpp  resonancetype.h  t.cpp
.github/: copilot-instructions.md
